# hackathon2023

./: .gitignore  Dockerfile  Hackathon Master industrue 4.0 2023.md  Hackathon.py  kill  params.yaml  pyproject.toml  start_streamlit
data/: credentials.pkl  dataset.csv  source_credentials.yaml
lib/: pipeline_mb_tools-0.1.0-py3-none-any.whl  simulation_api-0.7.1-py3-none-any.whl
models/: diffusion.py  evolution_functions.py  oven_api.py  product.py  quality_functions.py
scripts/: encode_credentials.py  test_reco_algo.py
streamlit_components/: authentication.py  manager.py  scorer.py  simulator.py  state_manager.py
